fix card alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@
 #root {
   display: flex;
   margin: auto;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
